# llm-template

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
examples/: basic_template.cpp  loop_template.cpp  registry.cpp  truncated.cpp
include/: llm_template.hpp
